# motor-control-via-hand-gesture

./: .gitignore  LICENSE  README.md  main.py
firmware/: CMakeLists.txt
firmware/components/PIDController/: CMakeLists.txt  PIDController.cpp
firmware/components/PIDController/include/: PIDController.hpp
firmware/components/mqtt_comm/: CMakeLists.txt  mqtt_comm.c  wifi_connection.c
firmware/components/mqtt_comm/include/: mqtt_comm.h  wifi_connection.h
firmware/components/test/: CMakeLists.txt  blink.c  mqtt_comm.c
firmware/components/test/include/: blink.h  mqtt_comm.h
firmware/components/wifi_connection/: CMakeLists.txt  wifi_connection.c
firmware/components/wifi_connection/include/: wifi_connection.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.cpp
gesture_recognition/: main.py  pyproject.toml  requirements.txt  test.py  thumb_points.csv
gesture_recognition/data/: thumb_points.csv
gesture_recognition/models/: random_forest.pkcls  rf_model.pkl
gesture_recognition/orange/: AI_model.ows
gesture_recognition/src/: hand_gesture_detector.py
gesture_recognition/src/data/: data_generator_for_thumb.py
gesture_recognition/src/models/: hand_gesture_detector.py  train_model.py
gesture_recognition/utils/: data_generator_for_thumb.py
gui/: generate_py_from_ui.py  main.py  pyproject.toml  requirements.txt
gui/dialogs/: pid_control_dialog.py  speed_monitor_dialog.py
gui/ui/: main_window.ui  pid_control_dialog.ui  speed_monitor_dialog.ui
gui/utils/: generate_py_from_ui.py
